--- a/wasm-bs-photo-app-1/Pages/NavBarExperiment.razor
+++ b/wasm-bs-photo-app-1/Pages/NavBarExperiment.razor
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="image-container">
-                        <img src="camel.jpg" />
+                        <img src="camel.jpg" class="img-fluid" />
                     </div>
                     <p>sadljlaksjd lakjsdlk jasld kjals dkjal skdj laksjd laksjd lkajs dlkajs ldkja lksdj lsa djs</p>
                     <p>sadljlaksjd lakjsdlk jasld kjals dkjal skdj laksjd laksjd lkajs dlkajs ldkja lksdj lsa djs</p>
