--- a/wasm-bs-photo-app-1/Layout/MainLayout.razor
+++ b/wasm-bs-photo-app-1/Layout/MainLayout.razor
@@ -28,6 +28,9 @@
                    class="border rounded-3 p-1 text-decoration-none ms-2">
                     <i class="bi bi-folder2-open bi-lg py-2 p-1"></i>
                 </a>
+                <a class="navbar-brand" href="#">
+                    <img src="https://placeholder.pics/svg/150x50/888888/EEE/Logo" alt="..." height="36">
+                </a>
             </div>
 
             <!-- Right Section: Third icon
