--- a/wasm-bs-photo-app-1/Components/OffCanvasPanelLeft.razor
+++ b/wasm-bs-photo-app-1/Components/OffCanvasPanelLeft.razor
@@ -40,6 +40,31 @@
                     <span class="bi bi-plus-square-fill ps-2"></span>  Navbar Experiment
                 </NavLink>
             </li>
+            <li class="nav-item">
+                <NavLink class="nav-link" data-bs-dismiss="offcanvas" @onclick='(()=>NavigateAndClose("filemanagertest1"))' href="javascript:void(0)">
+                    <span class="bi bi-plus-square-fill ps-2"></span> filemanagertest1
+                </NavLink>
+            </li>
+            <li class="nav-item">
+                <NavLink class="nav-link" data-bs-dismiss="offcanvas" @onclick='(()=>NavigateAndClose("filemanagertest2"))' href="javascript:void(0)">
+                    <span class="bi bi-plus-square-fill ps-2"></span> filemanagertest2
+                </NavLink>
+            </li>
+            <li class="nav-item">
+                <NavLink class="nav-link" data-bs-dismiss="offcanvas" @onclick='(()=>NavigateAndClose("cards1"))' href="javascript:void(0)">
+                    <span class="bi bi-plus-square-fill ps-2"></span> Cards 1
+                </NavLink>
+            </li>
+            <li class="nav-item">
+                <NavLink class="nav-link" data-bs-dismiss="offcanvas" @onclick='(()=>NavigateAndClose("imagecards"))' href="javascript:void(0)">
+                    <span class="bi bi-plus-square-fill ps-2"></span> Image Cards
+                </NavLink>
+            </li>
+            <li class="nav-item">
+                <NavLink class="nav-link" data-bs-dismiss="offcanvas" @onclick='(()=>NavigateAndClose("competitionspending"))' href="javascript:void(0)">
+                    <span class="bi bi-plus-square-fill ps-2"></span> Competitions Pending
+                </NavLink>
+            </li>
             <!-- Add other NavLink items here -->
         </ul> 
     </div>
