--- a/wasm-bs-photo-app-1/Pages/FileManagerTest1.razor
+++ b/wasm-bs-photo-app-1/Pages/FileManagerTest1.razor
@@ -1,7 +1,7 @@
 ﻿@page "/filemanagertest1"
 
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="container">
+<div class="container-fluid bg-light pt-2">
     <div class="row">
         <div class="col-md-3">
             <div class="ibox float-e-margins">
@@ -41,8 +41,41 @@
             </div>
         </div>
         <div class="col-md-9 animated fadeInRight">
-            <div class="row">
-                <div class="col-lg-12">
+            <div class="row justify-content-center">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp" class="card-img-top" alt="Sunset Over the Sea" />
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp" class="card-img-top" alt="Sunset Over the Sea" />
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+                <div class="card bg-dark text-white">
+  <img src="https://mdbcdn.b-cdn.net/img/new/slides/017.webp" class="card-img" alt="Stony Beach"/>
+  <div class="card-img-overlay">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">
+      This is a wider card with supporting text below as a natural lead-in to additional
+      content. This content is a little bit longer.
+    </p>
+    <p class="card-text">Last updated 3 mins ago</p>
+  </div>
+</div>
+                <div class="card bg-dark text-white">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/slides/017.webp" class="card-img" alt="Stony Beach" />
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">
+                            This is a wider card with supporting text below as a natural lead-in to additional
+                            content. This content is a little bit longer.
+                        </p>
+                        <p class="card-text">Last updated 3 mins ago</p>
+                    </div>
+                </div>
                     <div class="file-box">
                         <div class="file">
                             <a href="#">
@@ -239,154 +272,9 @@
                             </a>
                         </div>
                     </div>
-                    <div class="file-box">
-                        <div class="file">
-                            <a href="#">
-                                <span class="corner"></span>
+                   
 
-                                <div class="icon">
-                                    <i class="img-responsive fa fa-film"></i>
-                                </div>
-                                <div class="file-name">
-                                    Monica's birthday.mpg4
-                                    <br>
-                                    <small>Added: Fab 18, 2014</small>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="file-box">
-                        <a href="#">
-                            <div class="file">
-                                <span class="corner"></span>
-
-                                <div class="icon">
-                                    <i class="fa fa-bar-chart-o"></i>
-                                </div>
-                                <div class="file-name">
-                                    Annual report 2014.xls
-                                    <br>
-                                    <small>Added: Fab 22, 2014</small>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="file-box">
-                        <div class="file">
-                            <a href="#">
-                                <span class="corner"></span>
-
-                                <div class="icon">
-                                    <i class="fa fa-file"></i>
-                                </div>
-                                <div class="file-name">
-                                    Document_2014.doc
-                                    <br>
-                                    <small>Added: Jan 11, 2014</small>
-                                </div>
-                            </a>
-                        </div>
-
-                    </div>
-                    <div class="file-box">
-                        <div class="file">
-                            <a href="#">
-                                <span class="corner"></span>
-
-                                <div class="image">
-                                    <img alt="image" class="img-responsive" src="https://www.bootdey.com/image/400x300/40E0D0/000000">
-                                </div>
-                                <div class="file-name">
-                                    Italy street.jpg
-                                    <br>
-                                    <small>Added: Jan 6, 2014</small>
-                                </div>
-                            </a>
-
-                        </div>
-                    </div>
-                    <div class="file-box">
-                        <div class="file">
-                            <a href="#">
-                                <span class="corner"></span>
-
-                                <div class="image">
-                                    <img alt="image" class="img-responsive" src="https://www.bootdey.com/image/400x300/FF6347/000000">
-                                </div>
-                                <div class="file-name">
-                                    My feel.png
-                                    <br>
-                                    <small>Added: Jan 7, 2014</small>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="file-box">
-                        <div class="file">
-                            <a href="#">
-                                <span class="corner"></span>
-
-                                <div class="icon">
-                                    <i class="fa fa-music"></i>
-                                </div>
-                                <div class="file-name">
-                                    Michal Jackson.mp3
-                                    <br>
-                                    <small>Added: Jan 22, 2014</small>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="file-box">
-                        <div class="file">
-                            <a href="#">
-                                <span class="corner"></span>
-
-                                <div class="image">
-                                    <img alt="image" class="img-responsive" src="https://www.bootdey.com/image/400x300/6A5ACD/000000">
-                                </div>
-                                <div class="file-name">
-                                    Document_2014.doc
-                                    <br>
-                                    <small>Added: Fab 11, 2014</small>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="file-box">
-                        <div class="file">
-                            <a href="#">
-                                <span class="corner"></span>
-
-                                <div class="icon">
-                                    <i class="img-responsive fa fa-film"></i>
-                                </div>
-                                <div class="file-name">
-                                    Monica's birthday.mpg4
-                                    <br>
-                                    <small>Added: Fab 18, 2014</small>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="file-box">
-                        <a href="#">
-                            <div class="file">
-                                <span class="corner"></span>
-
-                                <div class="icon">
-                                    <i class="fa fa-bar-chart-o"></i>
-                                </div>
-                                <div class="file-name">
-                                    Annual report 2014.xls
-                                    <br>
-                                    <small>Added: Fab 22, 2014</small>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-
-                </div>
+               
             </div>
         </div>
     </div>
