--- a/wasm-bs-photo-app-1/Components/OffCanvasPanelLeft.razor
+++ b/wasm-bs-photo-app-1/Components/OffCanvasPanelLeft.razor
@@ -70,6 +70,11 @@
                     <span class="bi bi-plus-square-fill ps-2"></span> myimagestest1
                 </NavLink>
             </li>
+            <li class="nav-item">
+                <NavLink class="nav-link" data-bs-dismiss="offcanvas" @onclick='(()=>NavigateAndClose("myimagestest2api"))' href="javascript:void(0)">
+                    <span class="bi bi-plus-square-fill ps-2"></span> myimagestest2api
+                </NavLink>
+            </li>
             <!-- Add other NavLink items here -->
         </ul> 
     </div>
