--- a/wasm-bs-photo-app-1/Pages/MyImagesTest2Api.razor
+++ b/wasm-bs-photo-app-1/Pages/MyImagesTest2Api.razor
@@ -1,4 +1,4 @@
-﻿@page "/myimagestest1"
+﻿@page "/myimagestest2api"
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Fourth navbar example">
     <div class="container-fluid justify-content-end">
@@ -206,13 +206,3 @@
         </div>
     </div>
 </div>
-
-@code {
-    private void NavigateToImage(int id)
-    {
-        NavigationManager.NavigateTo($"/myimagestest1/myimage{id}");
-    }
-
-    [Inject]
-    private NavigationManager NavigationManager { get; set; } = default!;
-}
