--- a/wasm-bs-photo-app-1/Pages/MyImage.razor
+++ b/wasm-bs-photo-app-1/Pages/MyImage.razor
@@ -1,13 +1,13 @@
 ﻿
 
-@page "/myimagestest1/myimage{id:int}"
+@page "/myimagestest2api/myimage{id:int}"
 
 <div class="p-3">
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
             
-            <NavLink href="/myimagestest1">
+            <NavLink href="/myimagestest2api">
                     <i class="fa-regular fa-square-caret-left"></i>
                 </NavLink>
         </li>
