--- a/wasm-bs-photo-app-1/Pages/MyImagesTest2Api.razor
+++ b/wasm-bs-photo-app-1/Pages/MyImagesTest2Api.razor
@@ -74,10 +74,56 @@
                     {
                         <div class="col">
                             <div class="card shadow-sm">
-                                <img alt="image" class="card-img-top img-fluid" src="camel.jpg" @onclick="() => NavigateToImage(1)">
-                                <!--   <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
+                                <div class="image-container position-relative">
+                                    <img alt="image" class="card-img-top img-fluid" src="camel.jpg" @onclick="() => NavigateToImage(1)">
+
+                                    <!-- Image Name (Upper Left, Truncated) -->
+                                    <div class="overlay-text text-truncate">VeryLongImageNameThatMightBeTooLong.jpg</div>
+
+                                    <!-- Icons in Upper Right (Comment, Star, Bell) -->
+                                    <div class="overlay-icons position-absolute top-0 end-0 d-flex gap-2 p-2">
+                                        <!-- Comments -->
+                                        <span class="position-relative">
+                                            <i class="fa-regular fa-comment fs-5 text-white"></i>
+                                            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger p-1" style="font-size: 0.7rem;">
+                                                5
+                                                <span class="visually-hidden">unread comments</span>
+                                            </span>
+                                        </span>
+
+                                        <!-- Rating (Star) -->
+                                        <span class="position-relative">
+                                            <i class="fa-regular fa-star fs-5 text-white"></i>
+                                            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger p-1" style="font-size: 0.7rem;">
+                                                4
+                                                <span class="visually-hidden">rating</span>
+                                            </span>
+                                        </span>
+
+                                        <!-- Notifications (Bell) -->
+                                        <span class="position-relative">
+                                            <i class="fa-regular fa-bell fs-5 text-white"></i>
+                                            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger p-1" style="font-size: 0.7rem;">
+                                                3
+                                                <span class="visually-hidden">new notifications</span>
+                                            </span>
+                                        </span>
+                         
+                                    </div>
+
+                                    <!-- Retro Camera Date (Bottom Right) -->
+                                    <div class="overlay-date">2024.01.29 14:30</div>
+                                </div>
                                 <div class="card-body">
-                                    <p class="card-text">@imageCard.CurrentName</p>
+                                    <p class="card-text d-flex justify-content-between align-items-center">
+                                        <span>
+                                            <span class="badge text-bg-info">Info</span>
+                                            <span class="badge text-bg-light">Light</span>
+                                            <span class="badge text-bg-dark">Dark</span>
+                                        </span>
+
+                                
+                                    </p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-sm btn-outline-secondary">
@@ -85,8 +131,11 @@
                                                 Tag
                                             </button>
                                             <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                    
                                         </div>
-                                        <small class="text-body-secondary">9 mins</small>
+                                  
+                                            <button type="button" class="btn btn-sm  btn-outline-secondary"> <i class="fa-regular fa-trash-can"></i></button>
+                                      
                                     </div>
                                 </div>
                             </div>
@@ -227,15 +276,30 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+                <h1 class="modal-title fs-5" id="staticBackdropLabel">Upload picture</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                ...
+                <div class="input-group">
+                    <input type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
+                 
+                </div>
+                <p>
+                <div class="btn-group">
+                    <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                       Tag
+                    </button>
+                    <ul class="dropdown-menu">
+                       <li>New Upload</li>
+                        <li>Tag 2</li>
+                    </ul>
+                </div>
+                Dislay name form here...
+                </p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Understood</button>
+                <button type="button" class="btn btn-primary">Upload</button>
             </div>
         </div>
     </div>
